--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,6 @@ jobs:
         
       - name: 🔎 Run ESLint
         run: npm run lint
-        continue-on-error: true  # Allow lint warnings to not block CI
         
       - name: 📊 Check for console.log
         run: |
@@ -181,7 +180,32 @@ jobs:
         run: npx tsc --noEmit
 
   # =============================================
-  # JOB 6: DEPLOY TO STAGING (optional)
+  # JOB 6: LIGHTHOUSE AUDIT
+  # =============================================
+  lighthouse:
+    name: ⚡ Lighthouse Performance
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+      - name: 📥 Checkout code
+        uses: actions/checkout@v4
+        
+      - name: 📦 Download build artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: dist
+          path: dist
+          
+      - name: ⚡ Run Lighthouse CI
+        uses: treosh/lighthouse-ci-action@v11
+        with:
+          configPath: '.github/lighthouserc.json'
+          uploadArtifacts: true
+          temporaryPublicStorage: true
+
+  # =============================================
+  # JOB 7: DEPLOY TO STAGING (optional)
   # =============================================
   deploy-staging:
     name: 🚀 Deploy to Staging
